# kamekai

./: .rusty-hook.toml  CHANGELOG.md  README.md  post-commit  pre-commit  pre-push
.github/: dependabot.yaml
.github/workflows/: backend-build.yaml  frontend-build.yaml  run-on-comments.yaml
backend/: Cargo.toml  Dockerfile  Makefile  README.md  publish-in-linux.sh  publish.sh  run-cmd-in-shell.sh
backend/src/: cognito.rs  error.rs  language.rs  lib.rs  main.rs  otel.rs
backend/src/aws/: bedrock.rs  mod.rs  sts.rs
backend/src/conversation/: builder.rs  mod.rs
backend/src/server/: auth.rs  core.rs  handlers.rs  middleware.rs  mod.rs  models.rs
docs/: 000-setup.md  001-backend-init.md  002-tailwindcss-for-me.md  003-cognito.md  004-mac-builds.md
infra/: .gitignore  Makefile  README.md  acm.tf  app_runner.tf  cloudflare.tf  cloudwatch.tf  cognito.tf  ec2.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  run-cmd-in-shell.sh  setup_env_vars.sh  variables.tf  vpc.tf  waf.tf
infra/ec2s/linux/vanilla/: ec2.tf  setup.sh.tpl  variables.tf
kamekai/: .gitignore  .prettierignore  Makefile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.node.json
kamekai/src/: App.css  App.tsx  main.tsx
kamekai/src-tauri/: Cargo.toml  tauri.conf.json
kamekai/src-tauri/src/: lib.rs  main.rs
kamekai/src/components/: JWTDisplay.tsx
kamekai/src/config/: auth.tsx
kamekai/src/pages/: AuthStatus.tsx  ErrorPage.tsx  LoadingPage.tsx  TextProcessing.tsx
kirin/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
kirin/src/: App.css
kirin/src-tauri/: Cargo.toml  tauri.conf.json
kirin/src-tauri/src/: main.rs
