[package]
name = "backend"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.52.0"
aws-sdk-bedrockruntime = "1.65.0"
axum = "0.7"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.9"
