[package]
name = "backend"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.55.0"
aws-sdk-bedrockruntime = "1.67.0"
axum = "0.8"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "env"] }
jsonwebtoken = "9"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
tonic = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.11"
